# stt-jenerator

./: pyproject.toml
src/sttjenerator/core/: base_stt_generator.py
src/sttjenerator/examples/: example.py  run_inference.py
src/sttjenerator/models/: __init__.py  faster_whisper.py  registry.py
