[project]
name = "sttjenerator"
version = "0.1.0"
description = "It does STT."
authors = [{ name = "Warren Davies"}]
readme = "README.md"
homepage = "https://github.com/WarrenDavies/stt-jenerator"
repository = "https://github.com/WarrenDavies/stt-jenerator"
packages = [
    { include = "sttjenerator", from = "src" }
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "faster-whisper (>=1.2.1,<2.0.0)",
    "basejenerator @ file:///home/w/repos/base-jenerator",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
basejenerator = {develop = true}
